--- a/index.html
+++ b/index.html
@@ -19,3 +19,7 @@
     <a href="https://github.com/TsehaiR/hw2/blob/main/hw2_data/start_point_json.geojson">Point layer: Start Point</a><p></p>
     <a href="https://github.com/TsehaiR/hw2/blob/main/hw2_data/bus_route_json.geojson">Line layer: Bus Route</a><p></p>
     <a href="https://github.com/TsehaiR/hw2/blob/main/hw2_data/park_polygon_json.geojson">Polygon layer: End Point</a><p></p>
+
+
+    </body>
+    </html>
