--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="./images/hw2map.png" alt="Map of GoRaleigh Bus Routes" width= '750px'>
 
     </a>
-    <h4>Data used for this project is from:</h4><a href="https://data-ral.opendata.arcgis.com/"> DataLB</a>
+    <h4>Data used for this project is from:</h4><a href="https://data-ral.opendata.arcgis.com/"> RaleighOpenData </a>
     <h4>Vector Files</h4>
     <a href="https://github.com/TsehaiR/hw2/blob/main/hw2_data/start_point_json.geojson">Point layer: Start Point</a><p></p>
     <a href="https://github.com/TsehaiR/hw2/blob/main/hw2_data/bus_route_json.geojson">Line layer: Bus Route</a><p></p>
